APIs/googleapis.com/cloudfunctions/v1/python-client/README.md
# openapi-client
Manages lightweight user-provided functions executed in response to events.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://cloudfunctions.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://cloudfunctions.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.OperationsApi(api_client)
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    filter = 'filter_example' # str | The standard list filter. (optional)
    name = 'name_example' # str | The name of the operation's parent resource. (optional)
    page_size = 56 # int | The standard list page size. (optional)
    page_token = 'page_token_example' # str | The standard list page token. (optional)

    try:
        api_response = api_instance.cloudfunctions_operations_list(xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, filter=filter, name=name, page_size=page_size, page_token=page_token)
        print("The response of OperationsApi->cloudfunctions_operations_list:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling OperationsApi->cloudfunctions_operations_list: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudfunctions.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*OperationsApi* | [**cloudfunctions_operations_list**](docs/OperationsApi.md#cloudfunctions_operations_list) | **GET** /v1/operations | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_call**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_call) | **POST** /v1/{name}:call | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_create**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_create) | **POST** /v1/{location}/functions | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_delete**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_delete) | **DELETE** /v1/{name} | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_generate_download_url**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_generate_download_url) | **POST** /v1/{name}:generateDownloadUrl | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_generate_upload_url**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_generate_upload_url) | **POST** /v1/{parent}/functions:generateUploadUrl | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_get**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_get) | **GET** /v1/{name} | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_get_iam_policy**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_get_iam_policy) | **GET** /v1/{resource}:getIamPolicy | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_list**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_list) | **GET** /v1/{parent}/functions | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_patch**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_patch) | **PATCH** /v1/{name} | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_set_iam_policy**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_set_iam_policy) | **POST** /v1/{resource}:setIamPolicy | 
*ProjectsApi* | [**cloudfunctions_projects_locations_functions_test_iam_permissions**](docs/ProjectsApi.md#cloudfunctions_projects_locations_functions_test_iam_permissions) | **POST** /v1/{resource}:testIamPermissions | 
*ProjectsApi* | [**cloudfunctions_projects_locations_list**](docs/ProjectsApi.md#cloudfunctions_projects_locations_list) | **GET** /v1/{name}/locations | 


## Documentation For Models

 - [AuditConfig](docs/AuditConfig.md)
 - [AuditLogConfig](docs/AuditLogConfig.md)
 - [Binding](docs/Binding.md)
 - [CallFunctionRequest](docs/CallFunctionRequest.md)
 - [CallFunctionResponse](docs/CallFunctionResponse.md)
 - [CloudFunction](docs/CloudFunction.md)
 - [EventTrigger](docs/EventTrigger.md)
 - [Expr](docs/Expr.md)
 - [FailurePolicy](docs/FailurePolicy.md)
 - [GenerateDownloadUrlRequest](docs/GenerateDownloadUrlRequest.md)
 - [GenerateDownloadUrlResponse](docs/GenerateDownloadUrlResponse.md)
 - [GenerateUploadUrlRequest](docs/GenerateUploadUrlRequest.md)
 - [GenerateUploadUrlResponse](docs/GenerateUploadUrlResponse.md)
 - [GoogleCloudFunctionsV2LocationMetadata](docs/GoogleCloudFunctionsV2LocationMetadata.md)
 - [GoogleCloudFunctionsV2OperationMetadata](docs/GoogleCloudFunctionsV2OperationMetadata.md)
 - [GoogleCloudFunctionsV2Stage](docs/GoogleCloudFunctionsV2Stage.md)
 - [GoogleCloudFunctionsV2StateMessage](docs/GoogleCloudFunctionsV2StateMessage.md)
 - [GoogleCloudFunctionsV2alphaLocationMetadata](docs/GoogleCloudFunctionsV2alphaLocationMetadata.md)
 - [GoogleCloudFunctionsV2alphaOperationMetadata](docs/GoogleCloudFunctionsV2alphaOperationMetadata.md)
 - [GoogleCloudFunctionsV2alphaStage](docs/GoogleCloudFunctionsV2alphaStage.md)
 - [GoogleCloudFunctionsV2alphaStateMessage](docs/GoogleCloudFunctionsV2alphaStateMessage.md)
 - [GoogleCloudFunctionsV2betaLocationMetadata](docs/GoogleCloudFunctionsV2betaLocationMetadata.md)
 - [GoogleCloudFunctionsV2betaOperationMetadata](docs/GoogleCloudFunctionsV2betaOperationMetadata.md)
 - [GoogleCloudFunctionsV2betaStage](docs/GoogleCloudFunctionsV2betaStage.md)
 - [GoogleCloudFunctionsV2betaStateMessage](docs/GoogleCloudFunctionsV2betaStateMessage.md)
 - [HttpsTrigger](docs/HttpsTrigger.md)
 - [ListFunctionsResponse](docs/ListFunctionsResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListOperationsResponse](docs/ListOperationsResponse.md)
 - [Location](docs/Location.md)
 - [OnDeployUpdatePolicy](docs/OnDeployUpdatePolicy.md)
 - [Operation](docs/Operation.md)
 - [OperationMetadataV1](docs/OperationMetadataV1.md)
 - [Policy](docs/Policy.md)
 - [SecretEnvVar](docs/SecretEnvVar.md)
 - [SecretVersion](docs/SecretVersion.md)
 - [SecretVolume](docs/SecretVolume.md)
 - [SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [SourceRepository](docs/SourceRepository.md)
 - [Status](docs/Status.md)
 - [TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.


## Author




